--- a/.gitconfig
+++ b/.gitconfig
@@ -1,18 +1,15 @@
 [alias]
-    # Save time with initialisms
-    st = status
-    co = checkout
-    lg = log
-    # Some useful commands
-    pop = reset HEAD^
     shit = commit --amend --no-edit
     fuck = "!f(){ git shit && git push -f; };f"
     ignore = "!f() { echo \"$1\" >> .gitignore; }; f"
     ls = log --pretty=format:"%C(yellow)%h\\ %Creset%s%Cblue\\ [%cn]\\%Cred%d" --decorate
     ll = ls --numstat
     last = --no-pager log -1 --oneline --color
+    nuke = "!f(){ git reset --hard && git clean -fd; };f"
 [user]
 	name = Braden Marshall
 	email = braden1996@hotmail.co.uk
 [push]
 	default = current
+[commit]
+	gpgsign = false
