--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,47 +1,27 @@
-# Configuration for Alacritty, the GPU enhanced terminal emulator.
-
-# Setup term for programs to be able to use it
-# env:
-#   TERM: alacritty
+env:
+  TERM: alacritty
 
 scrolling:
-  # How many lines of scrollback to keep,
-  # '0' will disable scrolling.
   history: 10000
 
   # Number of lines the viewport will move for every line
   # scrolled when scrollback is enabled (history > 0).
-  multiplier: 3
+  multiplier: 1
 
-# Sample Font configuration for font: "JetBrainsMono Nerd Font".
-# Feel free to use different font configuration family & face for each sections
 font:
-  # Normal font face - Also used to draw glyphs on tmux & VIM
-  # NOTE: You may use any font you'd like but make sure the normal fonts
-  # support ligatures/glyphs. That's used by tmux & VIM to provide a better
-  # UI for powerline & tmux bottom bar.
   normal:
-    # Font name
-    family: "JetBrainsMono Nerd Font"
-    # Font face
-    style: Regular
+    family: "MonoLisa Nerd Font"
 
-  # Bold font face
   bold:
-    family: "JetBrainsMono Nerd Font"
+    family: "MonoLisa Nerd Font"
     style: Bold
 
-  # Italic font face
   italic:
-    family: "JetBrainsMono Nerd Font"
+    family: "MonoLisa Nerd Font"
     style: Italic
 
-  # Bold italic font face
-  # Note: Since i don't have a font italic version of this font, I just specified
-  # italic & it just works. You may specifiy the bold italic version if it exists
-  # for your font
   bold_italic:
-    family: "JetBrainsMono Nerd Font"
+    family: "MonoLisa Nerd Font"
     style: Italic
 
   # Font size
@@ -89,41 +69,22 @@ key_bindings:
 
 
 background_blur: true
-background_opacity: 0.92
+window:
+  opacity: 0.92
 
-# Colors (Dracula)
 colors:
-  # Default colors
   primary:
     background: '0x282a36'
     foreground: '0xf8f8f2'
 
-    # Bright and dim foreground colors
-    #
-    # The dimmed foreground color is calculated automatically if it is not present.
-    # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
-    # is `false`, the normal foreground color will be used.
-    #dim_foreground: '0x9a9a9a'
-    #bright_foreground: '0xffffff'
-
-  # Cursor colors
-  #
-  # Colors which should be used to draw the terminal cursor. If these are unset,
-  # the cursor color will be the inverse of the cell color.
   cursor:
     text: '0x44475a'
     cursor: '0xf8f8f2'
 
-  # Selection colors
-  #
-  # Colors which should be used to draw the selection area. If selection
-  # background is unset, selection color will be the inverse of the cell colors.
-  # If only text is unset the cell text color will remain the same.
   selection:
     text: '0xf8f8f2'
     background: '0x44475a'
 
-  # Normal colors
   normal:
     black:   '0x000000'
     red:     '0xff5555'
@@ -134,7 +95,6 @@ colors:
     cyan:    '0x8be9fd'
     white:   '0xbfbfbf'
 
-  # Bright colors
   bright:
     black:   '0x4d4d4d'
     red:     '0xff6e67'
@@ -145,10 +105,6 @@ colors:
     cyan:    '0x9aedfe'
     white:   '0xe6e6e6'
 
-  # Dim colors
-  #
-  # If the dim colors are not set, they will be calculated automatically based
-  # on the `normal` colors.
   dim:
     black:   '0x14151b'
     red:     '0xff2222'
@@ -159,15 +115,4 @@ colors:
     cyan:    '0x59dffc'
     white:   '0xe6e6d1'
 
-  # Indexed Colors
-  #
-  # The indexed colors include all colors from 16 to 256.
-  # When these are not set, they're filled with sensible defaults.
-  #
-  # Example:
-  #   `- { index: 16, color: '0xff00ff' }`
-  #
   indexed_colors: []
-
-# Visual Bell
-# ...
