--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
+
 set -g default-terminal "xterm"
 set -g mouse on
 
@@ -13,7 +15,3 @@ set -g @dracula-ram-usage true
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
-# Fig Tmux Integration: Enabled
-source-file ~/.fig/tmux
-# End of Fig Tmux Integration
